--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,4 +15,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
   </body>
+    <%= render "shared/navbar" %>
+    <%= yield %>
+    <%= render "shared/flashes" %>
 </html>
