--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,26 +1,32 @@
 .footer {
   display: flex;
+  width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background: white;
   padding: 10px;
+  flex-shrink: 0;
+}
+
+.footer-text {
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .footer-links {
   display: flex;
-  justify-content: space-around; /* This will space your columns evenly */
+  justify-content: space-around;
   width: 100%;
 }
 
 .footer-column {
   display: flex;
-  flex-direction: column; /* Aligns links in a column */
-  padding: 0 10px; /* Optional padding between columns */
+  flex-direction: column;
+  padding: 0 10px;
 }
 
 .footer-column a {
-  margin-bottom: 5px; /* Spacing between links */
-  text-decoration: none; /* Optional styling */
-  /* Add more styles for your links as needed */
+  margin-bottom: 5px;
+  text-decoration: none;
 }
