--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,16 +1,15 @@
 <div class="footer">
-  <%= "Made with ❤️ by the team behind OffChangeX" %>
   <div class="footer-links">
-    <div class="footer-column">
-      <!-- Column 1 Links -->
+    <div class="footer-column"> <!-- first column of links -->
       <a href="link1.html">Link 1</a>
       <a href="link2.html">Link 2</a>
     </div>
-    <div class="footer-column">
-      <!-- Column 2 Links -->
+    <div class="footer-column"> <!-- second column of links -->
       <a href="link3.html">Link 3</a>
       <a href="link4.html">Link 4</a>
     </div>
-    <!-- Add more columns as needed -->
+  </div>
+  <div class="footer-text">
+    <%= "Made with ❤️ by the team behind OffChangeX" %>
   </div>
 </div>
