--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,3 +1,7 @@
+<h1>All Jobs</h1>
 <% @jobs.each do |job| %>
-<%= job.title %>
+  <div>
+    <h3><%= link_to job.title, job_path(job) %></h3>
+    <p><%= job.description %></p>
+  </div>
 <% end %>
