Link to show added on the application.html file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+   <%= link_to "Jobs", jobs_path %>
+
     <%= render "shared/navbar" %>
     <%= yield %>
     <%= render "shared/flashes" %>
