Created edit, uptade and destroy

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,3 +1,7 @@
 <% @jobs.each do |job| %>
 <%= job.title %>
 <% end %>
+
+<%# <%= link_to "Edit", edit_job_path %>
+   <%# <%= link_to "delete", job_path(@job), %>
+    <%# data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
