Linked 'Browse Jobs' button to /jobs url

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
     <div class="container">
       <h2>Rent Jobs and experience a different lifestyle </h2>
       <p>Explore exciting job swaps and experience working in various roles.</p>
-      <a href="#browse-jobs" class="btn">Browse Jobs</a>
+      <a href="/jobs" class="btn">Browse Jobs</a>
     </div>
   </section>
 
