--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,10 +1,20 @@
-<h1>All Jobs</h1>
-<% @jobs.each do |job| %>
-  <div>
-    <h3><%= link_to job.title, job_path(job) %></h3>
-    <p><%= job.description %></p>
+<div class="container">
+  <h1>All Jobs</h1>
+
+  <div class="jobs-container">
+    <% @jobs.each do |job| %>
+      <div class="job-card">
+        <h3><%= link_to job.title, job_path(job) %></h3>
+        <p><%= job.description %></p>
+        <p><strong>Location:</strong> <%= job.location %></p>
+        <p><strong>Price:</strong> <%= job.price %></p>
+        <!-- Add more job details as needed -->
+
+        <%# Add links or buttons for actions like applying, viewing details, etc. %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
 
 <%# <%= link_to "Edit", edit_job_path %>
    <%# <%= link_to "delete", job_path(@job), %>
