--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -7,6 +7,7 @@
   <div class="form-inputs">
     <%= f.input :start_date, as: :date %>
     <%= f.input :end_date, as: :date %>
+    <%= f.input :status %>
    </div>
 
   <div class="form-actions">
