Some more correction

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -13,6 +13,6 @@
   <% end %>
 <% end %>
 
-<%= link_to "Add Review", new_job_booking_review_path(@job, @booking) %>
+<%= link_to "Add Review", new_job_booking_review_path(@job, @new_booking) %>
 
 <%= link_to "Back to Jobs", jobs_path %>
