As a user (visitor), I can add a review on my booking

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -13,6 +13,8 @@
   <% end %>
 <% end %>
 
-<%= link_to "Add Review", new_job_booking_review_path(@job, @new_booking) %>
+<% if @my_booking %>
+<%= link_to "Add Review", new_booking_review_path(@my_booking) %>
+<% end %>
 
 <%= link_to "Back to Jobs", jobs_path %>
