--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -7,8 +7,8 @@
   </div>
 
   <div>
-    <%= f.label :content %>
-    <%= f.text_area :content %>
+    <%= f.label :description %>
+    <%= f.text_area :description %>
   </div>
 
   <div>
