--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,9 +1,11 @@
-<%= simple_form_for [@user, @job] do |f| %>
-  <%= f.input :title %>
-  <%= f.input :description %>
-  <%= f.input :location %>
-  <%= f.input :price %>
-  <%= f.input :available_from %>
-  <%= f.input :credit_to_earn %>
-  <%= f.button :submit %>
-<% end %>
+<div class="jobs-form">
+  <%= simple_form_for [@user, @job] do |f| %>
+    <%= f.input :title %>
+    <%= f.input :description %>
+    <%= f.input :location %>
+    <%= f.input :price %>
+    <%= f.input :available_from %>
+    <%= f.input :credit_to_earn %>
+    <%= f.button :submit %>
+  <% end %>
+</div>
