--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -28,8 +28,9 @@
                     <p class="card-text"><%= booking.start_date %></p>
                     <p class="card-text"><%= booking.end_date %></p>
                     <p class="card-text"><%= booking.job.description %></p>
-                    <p class="card-text"><%= booking.job.status %></p>
-                    <p class="card-text">Booking owner :<%= job.user.first_name %></p>
+                    <p class="card-text"><%= booking.job.available %></p>
+                    <p class="card-text">Booking owner :<%= booking.job.user.first_name %></p>
+                    <p><%= link_to "Confirm", edit_booking_path(booking) %></p>
                 </div>
             </div>
             <% end %>
