--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,10 @@
 // Import page-specific CSS files here.
 @import "home";
 
+h1 {
+  padding: 20px;
+}
+
 .jobs-container {
   display: flex;
   flex-wrap: wrap;
@@ -10,14 +14,25 @@
 }
 
 .job-card {
-  display: block;
-  flex: 1;
-  min-width: 250px;
-  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 21%;
+  box-sizing: border-box;
+  padding: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
   text-decoration: none;
   color: inherit;
   padding: 10px;
+  min-width: 250px;
+  max-width: 300px;
   margin-bottom: 10px;
+}
+
+.scroll {
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .job-card:hover {
