--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -3,20 +3,18 @@
 
   <div class="jobs-container">
     <% @jobs.each do |job| %>
-      <% if job.available == true %>
-      <div><%= link_to job_path(job), class: "job-card" do %>
-        <h3><%= job.title %></h3>
-        <p><%= job.description %></p>
-        <p><%= job.location %></p>
-        <p><strong>$</strong> <%= job.price %></p>
-        <!-- Add more job details as needed -->
+      <% if job.available %>
+        <%= link_to job_path(job), class: "job-card" do %>
+          <h3><%= job.title %></h3>
+          <p class="scroll"><%= job.description %></p>
+          <p><%= job.location %></p>
+          <p><strong>$</strong> <%= job.price %></p>
         <% end %>
-        <%# Add links or buttons for actions like applying, viewing details, etc. %>
-      </div>
-    <% end %>
+      <% end %>
     <% end %>
   </div>
 </div>
+
 
 <%# <%= link_to "Edit", edit_job_path %>
    <%# <%= link_to "delete", job_path(@job), %>
