--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -46,7 +46,7 @@
                     <h5 class="card-title">Job ID: <%= job.id %></h5>
                      <p class="card-text"><%= link_to job.title, job_path(job) %></p>
                      <p class="card-text">Description: <%= job.description %></p>
-                     <p class="card-text">Location: <%= job.location %></p>
+                     <p class="card-text">address: <%= job.address %></p>
                      <p class="card-text">Price: <%= job.price %></p>
                 </div>
             </div>
