--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,7 +7,7 @@
       <div class="job-card">
         <h3><%= link_to job.title, job_path(job) %></h3>
         <p><%= job.description %></p>
-        <p><strong>Location:</strong> <%= job.location %></p>
+        <p><strong>address:</strong> <%= job.address %></p>
         <p><strong>Price:</strong> <%= job.price %></p>
         <!-- Add more job details as needed -->
 
