--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -2,7 +2,7 @@
     <h1>Dashboard</h1>
     <div class="row">
         <div class="col-md-6">
-            <h2>My Bookings</h2>
+            <h2>All My Bookings</h2>
             <% @my_bookings.each do |booking| %>
            <%= render partial: 'shared/booking_card', locals: { booking: booking } %>
             <% end %>
