--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,4 +1,17 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.content {
+  flex: 1;
+}
+
+
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
