--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -38,3 +38,89 @@ h1 {
 .job-card:hover {
   background-color: #f2f2f2;
 }
+
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+header {
+  background-color: #DCDCDC;
+  color: #000000;
+  padding: 10px 0;
+  text-align: center;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #000000;
+  font-weight: bold;
+}
+
+#hero {
+  background-image: url('path/to/your/hero-image.jpg'); /* background image to be added*/
+  background-size: cover;
+  color: #000000;
+  text-align: center;
+  padding: 100px 0;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #DCDCDC;
+  color: #000000;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+#contact {
+  background-color: #DCDCDC;
+  color: #000000;
+  padding: 50px 0;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 90%;
+  }
+
+  header {
+    padding: 10px;
+  }
+
+  #hero {
+    padding: 50px 0;
+  }
+
+  #contact {
+    padding: 30px 0;
+  }
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
