--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,9 +1,2 @@
-<%= simple_form_for [@user, @job] do |f| %>
-  <%= f.input :title %>
-  <%= f.input :description %>
-  <%= f.input :address %>
-  <%= f.input :price %>
-  <%= f.input :available_from %>
-  <%= f.input :credit_to_earn %>
-  <%= f.button :submit %>
-<% end %>
+
+<%= render "form", booking: @job %>
