--- a/app/views/shared/_job_card.html.erb
+++ b/app/views/shared/_job_card.html.erb
@@ -1,10 +1,12 @@
-<div class="card mb-3">
-  <div class="card-body">
-    <h5 class="card-title">Job ID: <%= job.id %></h5>
-    <p class="card-text"><%= link_to job.title, job_path(job) %></p>
-    <p class="card-text">Description: <%= job.description %></p>
-    <p class="card-text">Location: <%= job.location %></p>
-    <p class="card-text">Price: <%= job.price %></p>
-    <%= yield %>
+<a href="<%= job_path(job) %>" class="card-link">
+  <div class="card mb-3 rounded">
+    <div class="card-body">
+      <h5 class="card-title">Job ID: <%= job.id %></h5>
+      <p class="card-text"><%= link_to job.title, job_path(job) %></p>
+      <p class="card-text">Description: <%= job.description %></p>
+      <p class="card-text">Location: <%= job.location %></p>
+      <p class="card-text">Price: <%= job.price %></p>
+      <%= yield %>
+    </div>
   </div>
-</div>
+</a>
