--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 
             <%= if current_user.photo.attached?
-                  cl_image_tag user.photo.key, class: "avatar", alt: "user photo"
+                  cl_image_tag current_user.photo.key, class: "avatar", alt: "user photo"
                 else
                  image_tag "logo.png", class: "avatar", alt: "user photo"
                 end %>
