--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -7,7 +7,8 @@
   <div class="form-inputs">
     <%= f.input :start_date, as: :date %>
     <%= f.input :end_date, as: :date %>
-   </div>
+    <%= f.file_field :image %>
+  </div>
 
   <div class="form-actions">
     <%= f.button :submit %>
