--- a/app/views/shared/_job_card.html.erb
+++ b/app/views/shared/_job_card.html.erb
@@ -1,12 +1,17 @@
-<a href="<%= job_path(job) %>" class="card-link">
-  <div class="card mb-3 rounded">
-    <div class="card-body">
-      <h5 class="card-title">Job ID: <%= job.id %></h5>
-      <p class="card-text"><%= link_to job.title, job_path(job) %></p>
-      <p class="card-text">Description: <%= job.description %></p>
-      <p class="card-text">Location: <%= job.location %></p>
-      <p class="card-text">Price: <%= job.price %></p>
-      <%= yield %>
+<div class="card job-card">
+  <%= image_tag job.image.present? ? job.image : 'empty_image_placeholder.png', class: 'job-card-img', alt: 'Job Image' %>
+  <div class="card-body">
+    <h5 class="card-title"><%= job.title %></h5>
+    <p class="scroll"><%= job.description %></p>
+    <p><%= job.address %></p>
+    <p><strong>$</strong> <%= job.price %></p>
+    <div class="user-info">
+      <% if job.user.avatar.attached? %>
+        <%= image_tag job.user.avatar.url, class: 'user-avatar', alt: 'User Avatar' %>
+      <% else %>
+        <%= image_tag 'default_avatar.png', class: 'user-avatar', alt: 'Default Avatar' %>
+      <% end %>
+      <p class="user-name"><%= job.user.first_name %></p>
     </div>
   </div>
-</a>
+</div>
