--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -4,7 +4,7 @@
     <%= f.input :description %>
     <%= f.input :address %>
     <%= f.input :price %>
-    <%= f.input :available_from %>
+    <%= f.input :available_from, as: :date, label: "Pick a date", input_html: { class: 'datepicker' } %> %>
     <%= f.input :credit_to_earn %>
     <%= f.button :submit %>
   <% end %>
