Implemented buttons and javascript for the edit and the booking

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -40,7 +40,7 @@
       <h2 style="font-family: 'Montserrat', sans-serif;">My Credits</h2>
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Current credit: <%= @my_credits %></h5>
+          <h5 class="card-title">Current credit: <%= current_user.credit %></h5>
         </div>
       </div>
     </div>
