--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,42 @@
 @import "pages/index";
 @import "jobs/new";
 
+.job-card {
+  width: 300px;
+  margin: 20px;
+  padding: 15px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  text-align: left;
+  overflow: hidden;
+}
+
+.job-card-img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+
+.card-bottom {
+  padding-top: 15px;
+  text-align: center;
+}
+
+.user-info {
+  margin-top: 15px;
+}
+
+.user-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 5px;
+}
+
 .job-details-container {
   max-width: 800px;
   margin: auto;
