display 3 horizontal card job page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
 @import "jobs/new";
 
 .job-card {
-  width: 300px;
+  width: calc(33.33% - 40px); /* 40px is the combined margin and padding */
   margin: 20px;
   padding: 15px;
   border: 1px solid #ccc;
@@ -22,6 +22,12 @@
   background-color: #fff;
   text-align: left;
   overflow: hidden;
+}
+
+@media (max-width: 768px) {
+  .job-card {
+    width: calc(50% - 40px);
+  }
 }
 
 .job-card-img {
