--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,14 +44,16 @@
 
 .user-info {
   margin-top: 15px;
+  display: flex;
+  align-items: center;
 }
 
 .user-avatar {
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   object-fit: cover;
-  margin-bottom: 5px;
+  margin-right: 10px;
 }
 
 .job-details-container {
