--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,12 +17,13 @@
           </li>
           <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-
+             <div title= <%= current_user.first_name %> >
             <%= if current_user.photo.attached?
                   cl_image_tag current_user.photo.key, class: "avatar", alt: "user photo"
                 else
                  image_tag "logo.png", class: "avatar", alt: "user photo"
                 end %>
+          </div>
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Action", "#", class: "dropdown-item" %>
