--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,11 +1,7 @@
-<div class="jobs-form">
-  <%= simple_form_for [@user, @job] do |f| %>
-    <%= f.input :title %>
-    <%= f.input :description %>
-    <%= f.input :address %>
-    <%= f.input :price %>
-    <%= f.input :available_from %>
-    <%= f.input :credit_to_earn %>
-    <%= f.button :submit %>
-  <% end %>
+<%= render "form", job: @job %>
+
+<br>
+
+<div class="back-to-jobs-link-container">
+  <%= link_to "Back to jobs", jobs_path, class: "back-to-jobs-link" %>
 </div>
