--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -4,6 +4,7 @@
     <%= f.input :description %>
     <%= f.input :address %>
     <%= f.input :price %>
+     <%= f.file_field :photo %>
     <%= f.input :available_from %>
     <%= f.input :credit_to_earn %>
     <%= f.button :submit %>
