--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -5,7 +5,12 @@
     <% @jobs.each do |job| %>
       <% if job.available %>
         <%= link_to job_path(job), class: "job-card" do %>
-          <%= image_tag(job.image.present? ? job.image : 'empty_image_placeholder.png', class: 'job-card-img', alt: 'Job Image') %>
+            <%= if job.photo.attached?
+          cl_image_tag job.photo.key, class: "job-card-img", alt: "Job Image"
+        else
+          image_tag 'empty_image_placeholder.png', class: "avatar", alt: "Job Image"
+        end %>
+          <%# <%= image_tag(job.image.present? ? job.image : 'empty_image_placeholder.png', class: 'job-card-img', alt: 'Job Image') %>
           <h3><%= job.title %></h3>
           <p class="scroll"><%= job.description %></p>
           <p><%= job.address %></p>
