--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -2,28 +2,13 @@
   <div class="job-details-card ml-3">
 
     <h1 class="job-title"><%= @job.title %></h1>
-    <p class="job-description"><%= @job.description %></p>
-    <p class="job-price"><strong>Price:</strong> <%= @job.price %></p>
-    <p class="job-address"><strong>Address:</strong> <%= @job.address %></p>
-    <p class="job-available-from"><strong>Available From:</strong> <%= @job.available_from %></p>
-    <p class="job-credit-to-earn"><strong>Credit to Earn:</strong> <%= @job.credit_to_earn %></p>
-    <%= link_to "Book now", new_job_booking_path(@job), class: "btn btn-primary btn-sm" %>
-  </div>
-
-
   <div id="image-carousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <% if @job.image.present? %>
-        <div class="carousel-item active">
-          <%= image_tag(@job.image, class: 'd-block mx-auto mt-2 w-75 h-75', alt: 'Job Image') %>
-        </div>
-      <% else %>
-        <% 3.times do |index| %>
-          <div class="carousel-item <%= 'active' if index.zero? %>">
-            <%= image_tag('empty_image_placeholder.png', class: 'd-block mx-auto mt-2 w-75 h-75', alt: 'Empty Image') %>
-          </div>
-        <% end %>
-      <% end %>
+      <%= if @job.photo.attached?
+      cl_image_tag @job.photo.key, class: "avatar", alt: "user photo",  width: 200, height: 200
+    else
+      image_tag "logo.png", class: "avatar", alt: "user photo"
+    end %>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#image-carousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -34,6 +19,15 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+    <p class="job-description"><%= @job.description %></p>
+    <p class="job-price"><strong>Price:</strong> <%= @job.price %></p>
+    <p class="job-address"><strong>Address:</strong> <%= @job.address %></p>
+    <p class="job-available-from"><strong>Available From:</strong> <%= @job.available_from %></p>
+    <p class="job-credit-to-earn"><strong>Credit to Earn:</strong> <%= @job.credit_to_earn %></p>
+    <%= link_to "Book now", new_job_booking_path(@job), class: "btn btn-primary btn-sm" %>
+  </div>
+
+
 
 
   <% if current_user == @job.user %>
